--- a/old/templates - 2020_03_29/info.html
+++ b/old/templates - 2020_03_29/info.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>	
+<head>
+	<title>MGrep - Info</title>
 	<!-- Importo tramite Flask html contenente i riferimenti alle librerie bootstrap -->
 	{% include 'bootstrap.html' %}
 </head>
@@ -40,7 +41,6 @@
 				- pyfiglet 0.8	(ascii graphic library)
 			</p>
 			</section>
-			<img class="img-fluid" src="static/img/mgrep_logo.png">  
 		</div> 
 	</div> 
 	
@@ -89,9 +89,9 @@
 	</div>
 </div>
 
-<!-- Importo tramite Flask html contenente la parte finale della pagina -->
+<!-- Importo tramite Flask html contenente il piede della pagina -->
 <div>
-	{% include 'footer.html' %}
+  {% include 'footer.html' %}
 </div>
 
 </body>
